tests/paczka1/small_fuzzy/51169726.err
Error in line 3: GnsWrc S62 87,1
Error in line 1: zYHkdZh9 S802 69,4
Error in line 2: 8M6PaZRyRWh A751 621,9
Error in line 5: zYHkdZh9 S56 67,3
